<resources>
    <string name="app_name">MIPT_3</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="clear">AC</string>
    <string name="backspace"> </string>
    <string name="modulus">%</string>
    <string name="division">÷</string>
    <string name="multiply">×</string>
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="plusMinus">±</string>
    <string name="sqrRoot">√</string>

    <string name="calculator">Calculator</string>

</resources>